# python-wrapper

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
cupid/: __init__.py  annotations.py  auth.py  clients.py  cupid.py  graphs.py  models.py  pagination.py  relationships.py  testing.py  types.py  typing.py  users.py
docs/source/: api.rst  conf.py  index.rst  testing.rst
docs/source/static/: style.css
tests/: __init__.py  __main__.py  test_app.py  test_bad_tokens.py  test_session.py  test_users.py
