[metadata]
name = cupid
version = 0.3.1
author = Artemis
author_email = artemis@artemisdev.xyz
description = A Python wrapper for the Cupid API.
long_description = file: README.md
url = https://github.com/cupid-bot/python-wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    pydantic
